workloads/load-balancer-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: abdelalidocker/azure-reactjs
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/log/nginx
          name: host-volume
     
      volumes:
      - name: host-volume
        hostPath:
          path: /home/ubuntu/logs
          type: DirectoryOrCreate
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-server-webapp
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
